[workspace.package]
version = "0.0.0"
authors = ["Volodymyr Dotsenko <volodymyrdotsenko@gmail.com>"]
edition = "2021"
rust-version = "1.81.0"

[workspace]
resolver = "2"
members = [
    "chain/chain",
    "chain/chain-primitives",
    "core/crypto",
    "core/parameters",
    "core/primitives",
    "core/primitives-core",
    "core/schema-checker/schema-checker-macro",
    "core/schema-checker/schema-checker-lib",
    "core/time",
    "main",
    "utils/config",
    "utils/fmt",
    "utils/stdx",
]

[workspace.dependencies]
arbitrary = { version = "1.2.3", features = ["derive"] }
base64 = "0.21"
blake2 = { version = "0.10.6", features = ["reset"] }
# TODO: remove this override when https://github.com/camshaft/bolero/issues/196 is fixed upstream
# Currently the changes here are: https://github.com/camshaft/bolero/compare/master...Ekleog-NEAR:bolero:reduce-list-tests-run
bolero = { version = "0.10.0", git = "https://github.com/Ekleog-NEAR/bolero", rev = "c37993bd70dcf5b1778b03daf29f686225e9a504", features = [
    "arbitrary",
] }
borsh = { version = "1.0.0", features = ["derive", "rc"] }
bs58 = "0.4"
curve25519-dalek = { version = "4.1.3", default-features = false }
derive_more = "0.99.9"
ed25519-dalek = { version = "2.1.0", default-features = false }
hex = { version = "0.4.2", features = ["serde"] }
hex-literal = "0.2"
json_comments = "0.2.1"

near-account-id = { version = "1.0.0-alpha.4", features = [
    "internal_unstable",
    "serde",
    "borsh",
] }
near-chain = { path = "chain/chain" }
near-chain-primitives = { path = "chain/chain-primitives" }
near-config-utils = { path = "utils/config" }
near-crypto = { path = "core/crypto" }
near-fmt = { path = "utils/fmt" }
near-parameters = { path = "core/parameters" }
near-primitives = { path = "core/primitives" }
near-primitives-core = { path = "core/primitives-core" }
near-schema-checker-macro = { path = "core/schema-checker/schema-checker-macro" }
near-schema-checker-lib = { path = "core/schema-checker/schema-checker-lib" }
near-time = { path = "core/time" }

ordered-float = { version = "4.2.0", features = ["serde", "borsh"] }
primitive-types = { version = "0.10", default-features = false }
proc-macro2 = "1.0.64"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.5"
secp256k1 = { version = "0.27.0", default-features = false }
serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }
serde_json = "1.0.68"
serde_with = { version = "3.0", features = ["base64"] }
sha2 = "0.10"
smart-default = "0.6"
stdx = { package = "near-stdx", path = "utils/stdx" }
strum = { version = "0.24", features = ["derive"] }
subtle = "2.2"
tempfile = "3.3"
thiserror = "1.0.30"
time = { version = "0.3.9", default-features = false }
