[package]
name = "my-solana-clap-v3-utils"
description = "My Solana utilities for the clap v3"
documentation = "https://docs.rs/solana-clap-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "3.2.23", features = ["cargo"] }
rpassword = { workspace = true }
my-solana-sdk = { workspace = true }
tiny-bip39 = { workspace = true }

