[package]
name = "my-solana-keygen"
description = "My Solana key generation utility"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "3.1.5", features = ["cargo"] }
tiny-bip39 = { workspace = true }

[[bin]]
name = "my-solana-keygen"
path = "src/main.rs"
