[package]
name = "my-solana-program"
description = "My Solana Program"
documentation = "https://docs.rs/solana-program"
readme = "README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = "1.75.0" # solana platform-tools rust version

[dependencies]
bs58 = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
static_assertions = { workspace = true }

