[package]
name = "near-primitives-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
arbitrary.workspace = true
base64.workspace = true
borsh.workspace = true
bs58.workspace = true
derive_more.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

near-account-id.workspace = true
near-schema-checker-lib.workspace = true

[dev-dependencies]
serde_json.workspace = true
