[package]
name = "near-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
arbitrary.workspace = true
base64.workspace = true
borsh.workspace = true
chrono.workspace = true
derive_more.workspace = true
itertools = { workspace = true }
ordered-float.workspace = true
rand = { workspace = true }
rand_chacha = { workspace = true, optional = true }
reed-solomon-erasure = { workspace = true }
serde.workspace = true
serde_with.workspace = true
smart-default.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true

near-time = { workspace = true }
near-crypto.workspace = true
near-fmt.workspace = true
near-primitives-core.workspace = true
near-parameters.workspace = true
near-schema-checker-lib.workspace = true
